--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 services:
   backend:
     build:
-      context: ./app
+      context: .
     restart: always
     volumes:
-      - ./app:/app
+      - .:/app
     ports:
       - "8018:8000"
     command: uvicorn main:app --host 0.0.0.0 --port 8000
