--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
-.env
+.idea
+venv/
+.idea/
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+*.sql
+*.dump
+.env
+qodana.yaml
+db.sqlite3/
+db.sqlite3
+.venv/
+backups/
+backups/*
+backups
+assets/media/
+assets/media/*
+assets/staticfiles/*
+assets/staticfiles/
+assets/logs/*
+celerybeat-schedule
